src/antlr/gen/CMParser.cpp

// Generated from /Users/joakimstien/code/cish/cish/grammar/CM.g4 by ANTLR 4.13.2


#include "CMListener.h"
#include "CMVisitor.h"

#include "CMParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CMParserStaticData final {
  CMParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CMParserStaticData(const CMParserStaticData&) = delete;
  CMParserStaticData(CMParserStaticData&&) = delete;
  CMParserStaticData& operator=(const CMParserStaticData&) = delete;
  CMParserStaticData& operator=(CMParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag cmParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<CMParserStaticData> cmParserStaticData = nullptr;

void cmParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (cmParserStaticData != nullptr) {
    return;
  }
#else
  assert(cmParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CMParserStaticData>(
    std::vector<std::string>{
      "root", "rootBlock", "rootItem", "expression", "expr", "exprAtom", 
      "statement", "expressionStatement", "returnStatement", "ifStatement", 
      "elseStatement", "forStatement", "forInitializer", "forIterator", 
      "whileStatement", "doWhileStatement", "assignment", "arithmeticAssignment", 
      "variableDeclaration", "structDeclaration", "structFieldDeclaration", 
      "functionDeclaration", "functionDefinition", "functionCall", "expressionList", 
      "identifierList", "functionParameter", "identifier", "typeIdentifier", 
      "typeName", "sizeofTerm", "stringLiteral", "systemInclude", "sysModuleName"
    },
    std::vector<std::string>{
      "", "'('", "')'", "'.'", "'->'", "'['", "']'", "'++'", "'--'", "'!'", 
      "'~'", "'&'", "'sizeof'", "'<<'", "'>>'", "'^'", "'|'", "'return'", 
      "'if'", "'else'", "'for'", "'while'", "'do'", "'+='", "'-='", "'*='", 
      "'/='", "'%='", "'<<='", "'>>='", "'&='", "'^='", "'|='", "','", "'bool'", 
      "'char'", "'int'", "'long'", "'short'", "'float'", "'double'", "'void'", 
      "'#include'", "'*'", "'||'", "'&&'", "'=='", "'!='", "'>='", "'<='", 
      "'>'", "'<'", "'+'", "'-'", "", "'/'", "'%'", "'{'", "'}'", "';'", 
      "'='", "'NULL'", "'const'", "'struct'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "Asterisk", "Or", "And", "Equals", 
      "NEquals", "GTEquals", "LTEquals", "GT", "LT", "Add", "Subtract", 
      "Multiply", "Divide", "Modulus", "OBrace", "CBrace", "SColon", "Assign", 
      "Null", "Const", "Struct", "Integer", "Floating", "Boolean", "String", 
      "Char", "Identifier", "Comment", "Space", "SysModuleName"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  cmParserStaticData = std::move(staticData);
}

}

CMParser::CMParser(TokenStream *input) : CMParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CMParser::CMParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CMParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *cmParserStaticData->atn, cmParserStaticData->decisionToDFA, cmParserStaticData->sharedContextCache, options);
}

CMParser::~CMParser() {
  delete _interpreter;
}

const atn::ATN& CMParser::getATN() const {
  return *cmParserStaticData->atn;
}

std::string CMParser::getGrammarFileName() const {
  return "CM.g4";
}

const std::vector<std::string>& CMParser::getRuleNames() const {
  return cmParserStaticData->ruleNames;
}

const dfa::Vocabulary& CMParser::getVocabulary() const {
  return cmParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CMParser::getSerializedATN() const {
  return cmParserStaticData->serializedATN;
}


//----------------- RootContext ------------------------------------------------------------------

CMParser::RootContext::RootContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CMParser::RootBlockContext* CMParser::RootContext::rootBlock() {
  return getRuleContext<CMParser::RootBlockContext>(0);
}

tree::TerminalNode* CMParser::RootContext::EOF() {
  return getToken(CMParser::EOF, 0);
}


size_t CMParser::RootContext::getRuleIndex() const {
  return CMParser::RuleRoot;
}

void CMParser::RootContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRoot(this);
}

void CMParser::RootContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRoot(this);
}


std::any CMParser::RootContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CMVisitor*>(visitor))
    return parserVisitor->visitRoot(this);
  else
    return visitor->visitChildren(this);
}

CMParser::RootContext* CMParser::root() {
  RootContext *_localctx = _tracker.createInstance<RootContext>(_ctx, getState());
  enterRule(_localctx, 0, CMParser::RuleRoot);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    rootBlock();
    setState(69);
    match(CMParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RootBlockContext ------------------------------------------------------------------

CMParser::RootBlockContext::RootBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CMParser::RootItemContext *> CMParser::RootBlockContext::rootItem() {
  return getRuleContexts<CMParser::RootItemContext>();
}

CMParser::RootItemContext* CMParser::RootBlockContext::rootItem(size_t i) {
  return getRuleContext<CMParser::RootItemContext>(i);
}


size_t CMParser::RootBlockContext::getRuleIndex() const {
  return CMParser::RuleRootBlock;
}

void CMParser::RootBlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRootBlock(this);
}

void CMParser::RootBlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRootBlock(this);
}


std::any CMParser::RootBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CMVisitor*>(visitor))
    return parserVisitor->visitRootBlock(this);
  else
    return visitor->visitChildren(this);
}

CMParser::RootBlockContext* CMParser::rootBlock() {
  RootBlockContext *_localctx = _tracker.createInstance<RootBlockContext>(_ctx, getState());
  enterRule(_localctx, 2, CMParser::RuleRootBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & -4611677239514234880) != 0)) {
      setState(71);
      rootItem();
      setState(76);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RootItemContext ------------------------------------------------------------------

CMParser::RootItemContext::RootItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CMParser::FunctionDefinitionContext* CMParser::RootItemContext::functionDefinition() {
  return getRuleContext<CMParser::FunctionDefinitionContext>(0);
}

CMParser::FunctionDeclarationContext* CMParser::RootItemContext::functionDeclaration() {
  return getRuleContext<CMParser::FunctionDeclarationContext>(0);
}

CMParser::VariableDeclarationContext* CMParser::RootItemContext::variableDeclaration() {
  return getRuleContext<CMParser::VariableDeclarationContext>(0);
}

tree::TerminalNode* CMParser::RootItemContext::SColon() {
  return getToken(CMParser::SColon, 0);
}

CMParser::SystemIncludeContext* CMParser::RootItemContext::systemInclude() {
  return getRuleContext<CMParser::SystemIncludeContext>(0);
}

CMParser::StructDeclarationContext* CMParser::RootItemContext::structDeclaration() {
  return getRuleContext<CMParser::StructDeclarationContext>(0);
}


size_t CMParser::RootItemContext::getRuleIndex() const {
  return CMParser::RuleRootItem;
}

void CMParser::RootItemContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRootItem(this);
}

void CMParser::RootItemContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRootItem(this);
}


std::any CMParser::RootItemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CMVisitor*>(visitor))
    return parserVisitor->visitRootItem(this);
  else
    return visitor->visitChildren(this);
}

CMParser::RootItemContext* CMParser::rootItem() {
  RootItemContext *_localctx = _tracker.createInstance<RootItemContext>(_ctx, getState());
  enterRule(_localctx, 4, CMParser::RuleRootItem);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(84);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(77);
      functionDefinition();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(78);
      functionDeclaration();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(79);
      variableDeclaration();
      setState(80);
      match(CMParser::SColon);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(82);
      systemInclude();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(83);
      structDeclaration();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

CMParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CMParser::ExprContext* CMParser::ExpressionContext::expr() {
  return getRuleContext<CMParser::ExprContext>(0);
}


size_t CMParser::ExpressionContext::getRuleIndex() const {
  return CMParser::RuleExpression;
}

void CMParser::ExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpression(this);
}

void CMParser::ExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpression(this);
}


std::any CMParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CMVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}

CMParser::ExpressionContext* CMParser::expression() {
  ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, getState());
  enterRule(_localctx, 6, CMParser::RuleExpression);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

CMParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t CMParser::ExprContext::getRuleIndex() const {
  return CMParser::RuleExpr;
}

void CMParser::ExprContext::copyFrom(ExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- MINUS_EXPRContext ------------------------------------------------------------------

tree::TerminalNode* CMParser::MINUS_EXPRContext::Subtract() {
  return getToken(CMParser::Subtract, 0);
}

CMParser::ExprContext* CMParser::MINUS_EXPRContext::expr() {
  return getRuleContext<CMParser::ExprContext>(0);
}

CMParser::MINUS_EXPRContext::MINUS_EXPRContext(ExprContext *ctx) { copyFrom(ctx); }

void CMParser::MINUS_EXPRContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMINUS_EXPR(this);
}
void CMParser::MINUS_EXPRContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMINUS_EXPR(this);
}

std::any CMParser::MINUS_EXPRContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CMVisitor*>(visitor))
    return parserVisitor->visitMINUS_EXPR(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MULT_EXPRContext ------------------------------------------------------------------

std::vector<CMParser::ExprContext *> CMParser::MULT_EXPRContext::expr() {
  return getRuleContexts<CMParser::ExprContext>();
}

CMParser::ExprContext* CMParser::MULT_EXPRContext::expr(size_t i) {
  return getRuleContext<CMParser::ExprContext>(i);
}

tree::TerminalNode* CMParser::MULT_EXPRContext::Asterisk() {
  return getToken(CMParser::Asterisk, 0);
}

tree::TerminalNode* CMParser::MULT_EXPRContext::Divide() {
  return getToken(CMParser::Divide, 0);
}

tree::TerminalNode* CMParser::MULT_EXPRContext::Modulus() {
  return getToken(CMParser::Modulus, 0);
}

CMParser::MULT_EXPRContext::MULT_EXPRContext(ExprContext *ctx) { copyFrom(ctx); }

void CMParser::MULT_EXPRContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMULT_EXPR(this);
}
void CMParser::MULT_EXPRContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMULT_EXPR(this);
}

std::any CMParser::MULT_EXPRContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CMVisitor*>(visitor))
    return parserVisitor->visitMULT_EXPR(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NEGATION_EXPRContext ------------------------------------------------------------------

CMParser::ExprContext* CMParser::NEGATION_EXPRContext::expr() {
  return getRuleContext<CMParser::ExprContext>(0);
}

CMParser::NEGATION_EXPRContext::NEGATION_EXPRContext(ExprContext *ctx) { copyFrom(ctx); }

void CMParser::NEGATION_EXPRContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNEGATION_EXPR(this);
}
void CMParser::NEGATION_EXPRContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNEGATION_EXPR(this);
}

std::any CMParser::NEGATION_EXPRContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CMVisitor*>(visitor))
    return parserVisitor->visitNEGATION_EXPR(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PREFIX_INC_EXPRContext ------------------------------------------------------------------

CMParser::ExprContext* CMParser::PREFIX_INC_EXPRContext::expr() {
  return getRuleContext<CMParser::ExprContext>(0);
}

CMParser::PREFIX_INC_EXPRContext::PREFIX_INC_EXPRContext(ExprContext *ctx) { copyFrom(ctx); }

void CMParser::PREFIX_INC_EXPRContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPREFIX_INC_EXPR(this);
}
void CMParser::PREFIX_INC_EXPRContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPREFIX_INC_EXPR(this);
}

std::any CMParser::PREFIX_INC_EXPRContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CMVisitor*>(visitor))
    return parserVisitor->visitPREFIX_INC_EXPR(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ONES_COMPLEMENT_EXPRContext ------------------------------------------------------------------

CMParser::ExprContext* CMParser::ONES_COMPLEMENT_EXPRContext::expr() {
  return getRuleContext<CMParser::ExprContext>(0);
}

CMParser::ONES_COMPLEMENT_EXPRContext::ONES_COMPLEMENT_EXPRContext(ExprContext *ctx) { copyFrom(ctx); }

void CMParser::ONES_COMPLEMENT_EXPRContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterONES_COMPLEMENT_EXPR(this);
}
void CMParser::ONES_COMPLEMENT_EXPRContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitONES_COMPLEMENT_EXPR(this);
}

std::any CMParser::ONES_COMPLEMENT_EXPRContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CMVisitor*>(visitor))
    return parserVisitor->visitONES_COMPLEMENT_EXPR(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ADD_EXPRContext ------------------------------------------------------------------

std::vector<CMParser::ExprContext *> CMParser::ADD_EXPRContext::expr() {
  return getRuleContexts<CMParser::ExprContext>();
}

CMParser::ExprContext* CMParser::ADD_EXPRContext::expr(size_t i) {
  return getRuleContext<CMParser::ExprContext>(i);
}

tree::TerminalNode* CMParser::ADD_EXPRContext::Add() {
  return getToken(CMParser::Add, 0);
}

tree::TerminalNode* CMParser::ADD_EXPRContext::Subtract() {
  return getToken(CMParser::Subtract, 0);
}

CMParser::ADD_EXPRContext::ADD_EXPRContext(ExprContext *ctx) { copyFrom(ctx); }

void CMParser::ADD_EXPRContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterADD_EXPR(this);
}
void CMParser::ADD_EXPRContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitADD_EXPR(this);
}

std::any CMParser::ADD_EXPRContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CMVisitor*>(visitor))
    return parserVisitor->visitADD_EXPR(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AND_EXPRContext ------------------------------------------------------------------

std::vector<CMParser::ExprContext *> CMParser::AND_EXPRContext::expr() {
  return getRuleContexts<CMParser::ExprContext>();
}

CMParser::ExprContext* CMParser::AND_EXPRContext::expr(size_t i) {
  return getRuleContext<CMParser::ExprContext>(i);
}

tree::TerminalNode* CMParser::AND_EXPRContext::And() {
  return getToken(CMParser::And, 0);
}

tree::TerminalNode* CMParser::AND_EXPRContext::Or() {
  return getToken(CMParser::Or, 0);
}

CMParser::AND_EXPRContext::AND_EXPRContext(ExprContext *ctx) { copyFrom(ctx); }

void CMParser::AND_EXPRContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAND_EXPR(this);
}
void CMParser::AND_EXPRContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAND_EXPR(this);
}

std::any CMParser::AND_EXPRContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CMVisitor*>(visitor))
    return parserVisitor->visitAND_EXPR(this);
  else
    return visitor->visitChildren(this);
}
//----------------- POSTFIX_INC_EXPRContext ------------------------------------------------------------------

CMParser::ExprContext* CMParser::POSTFIX_INC_EXPRContext::expr() {
  return getRuleContext<CMParser::ExprContext>(0);
}

CMParser::POSTFIX_INC_EXPRContext::POSTFIX_INC_EXPRContext(ExprContext *ctx) { copyFrom(ctx); }

void CMParser::POSTFIX_INC_EXPRContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPOSTFIX_INC_EXPR(this);
}
void CMParser::POSTFIX_INC_EXPRContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPOSTFIX_INC_EXPR(this);
}

std::any CMParser::POSTFIX_INC_EXPRContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CMVisitor*>(visitor))
    return parserVisitor->visitPOSTFIX_INC_EXPR(this);
  else
    return visitor->visitChildren(this);
}
//----------------- SIZEOF_EXPRContext ------------------------------------------------------------------

CMParser::SizeofTermContext* CMParser::SIZEOF_EXPRContext::sizeofTerm() {
  return getRuleContext<CMParser::SizeofTermContext>(0);
}

CMParser::SIZEOF_EXPRContext::SIZEOF_EXPRContext(ExprContext *ctx) { copyFrom(ctx); }

void CMParser::SIZEOF_EXPRContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSIZEOF_EXPR(this);
}
void CMParser::SIZEOF_EXPRContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSIZEOF_EXPR(this);
}

std::any CMParser::SIZEOF_EXPRContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CMVisitor*>(visitor))
    return parserVisitor->visitSIZEOF_EXPR(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ADDROF_EXPRContext ------------------------------------------------------------------

CMParser::ExprContext* CMParser::ADDROF_EXPRContext::expr() {
  return getRuleContext<CMParser::ExprContext>(0);
}

CMParser::ADDROF_EXPRContext::ADDROF_EXPRContext(ExprContext *ctx) { copyFrom(ctx); }

void CMParser::ADDROF_EXPRContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterADDROF_EXPR(this);
}
void CMParser::ADDROF_EXPRContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitADDROF_EXPR(this);
}

std::any CMParser::ADDROF_EXPRContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CMVisitor*>(visitor))
    return parserVisitor->visitADDROF_EXPR(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BITWISE_EXPRContext ------------------------------------------------------------------

std::vector<CMParser::ExprContext *> CMParser::BITWISE_EXPRContext::expr() {
  return getRuleContexts<CMParser::ExprContext>();
}

CMParser::ExprContext* CMParser::BITWISE_EXPRContext::expr(size_t i) {
  return getRuleContext<CMParser::ExprContext>(i);
}

CMParser::BITWISE_EXPRContext::BITWISE_EXPRContext(ExprContext *ctx) { copyFrom(ctx); }

void CMParser::BITWISE_EXPRContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBITWISE_EXPR(this);
}
void CMParser::BITWISE_EXPRContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBITWISE_EXPR(this);
}
